# powspec

./: CMakeLists.txt
